<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu</name>
  <version>0.1.0</version>
  <description>Eat a dik</description>
  
  <author email="ros@tegan.dev">Tegan Burns</author>
  <license>Proprietary</license>
  <maintainer email="ros@tegan.dev">Tegan Burns</maintainer>

  <url type="website">https://tegan.dev/</url>
  <url type="repository">https://github.com/teganburns/sweeping-robot</url>
  <url type="bugtracker">https://github.com/teganburns/sweeping-robot/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-pkg</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-pkg</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-pkg</build_depend><!-- sphinx requirement -->
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-pkg</build_depend><!-- sphinx requirement -->

      <!-- I added this from gbot -->
    <!--build_depend>sensor_msgs</build_depend-->
    <!--build_depend>std_srvs</build_depend-->

  <build_export_depend>message_runtime</build_export_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-mock</test_depend>
  <test_depend>python3-sense-emu-pip</test_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python3-sense-hat-pip</exec_depend>

      <!--I Added this from gbot-->
    <!--exec_depend>sensor_msgs</exec_depend-->
    <!--exec_depend>cartographer_ros</exec_depend-->

  <export>
    <architecture_independent />
    <rosdoc config="rosdoc.yaml"/>    
  </export>

</package>
